Fixed extra space under images

--- a/Portfolio/home.css
+++ b/Portfolio/home.css
@@ -98,6 +98,7 @@ button {
 }
 
 .swiper-slide img {
+    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
